--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,29 +142,85 @@ menu .cancel-icon {
   font-size: 16px;
   float: right;
 }
-.row
-{
-  margin-left: 0px;
+.tile {
+  border-radius: 5px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 3px;
+  margin-bottom: 50px;
+  overflow: hidden;
+}
+.tile .imgb {
+  float: left;
+  width: 50%;
+  height: 143px;
+  overflow: hidden;
+  background-size: cover;
+}
+.tile .txtb {
+  float: left;
+  width: 50%;
+}
+.price-detail {
+  border-bottom: 1px solid #ccc;
+  float: left;
+}
+.price-detail strong {
+  width: 50%;
+  padding: 5px;
+  box-sizing: border-box;
+  font-size: 18px;
+  float: left;
+}
+.price-detail strong.total {
+  border-left: 1px solid #ccc;
+  color: #020202;
+}
+.price-detail strong span {
+  font-size: 11px;
+  color: #ccc;
+  display: block;
+  float: left;
+}
+.description {
+  padding: 5px;
+  float: left;
+}
+.description h3 {
+  font-size: 18px;
+}
+.description p {
+  font-size: 12px;
 }
 
-.section1{
-  border: 1px solid #000;
+.aditional-info {
+  float: left;
+  background-color: #ccc;
   width: 100%;
-  height: 110px;
-  margin-left: 2px !important;
-
-  margin-bottom: 0px;
-  
-  
-
-
+  padding: 5px 0;
+  box-sizing: border-box;
 }
-.section2{
-  
-  border: 1px solid #000;
+.aditional-info strong {
+  float: left;
+  width: 33.3%;
+  box-sizing: border-box;
+  font-size: 14px;
+  color: #3494fa;
+  padding: 0 5px;
+}
+.aditional-info strong span {
+  display: block;
+  font-size: 11px;
+  font-weight: normal;
+  color: #000;
+}
+.bottom-bar {
+  float: left;
   width: 100%;
-  margin-left: 2px !important;
-  height: 35px;
-  margin-bottom: 0px;
-
+}
+.bottom-bar > div {
+  background: #3494fa;
+  width: 33.3%;
+  float: left;
+  box-sizing: border-box;
+  padding: 5px;
 }
