--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: k
 }
 .main-container {
   height: 100vh;
@@ -8,6 +9,7 @@
 }
 header {
   position: fixed;
+  z-index: 10000;
   background-color: #3494fa;
   padding: 20px;
   width: 100%;
@@ -49,6 +51,7 @@ header {
 
 footer {
   position: fixed;
+  z-index: 10000;
   bottom: 0;
   width: 100%;}
 footer div {
@@ -61,6 +64,7 @@ footer div {
   text-align: center;
   cursor:pointer;
   padding: 7px 10px 10px 10px;
+  color:#ffffff;
 }
 footer div:last-child {
   border: none;
@@ -146,7 +150,7 @@ menu .cancel-icon {
   border-radius: 5px;
   box-sizing: border-box;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 3px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   overflow: hidden;
 }
 .tile .imgb {
@@ -174,22 +178,28 @@ menu .cancel-icon {
 .price-detail strong.total {
   border-left: 1px solid #ccc;
   color: #020202;
+  text-align: center;
 }
 .price-detail strong span {
-  font-size: 11px;
-  color: #ccc;
+  font-size: 9px;
+  color: #929eaa;
   display: block;
   float: left;
+  margin-left: 10px;
 }
 .description {
   padding: 5px;
   float: left;
 }
 .description h3 {
-  font-size: 18px;
+  font-size: 14px;
 }
 .description p {
-  font-size: 12px;
+  
+  margin-bottom: 5px;
+    font-size: 12px;
+    margin-left: 15px;
+    color: #929eaa;
 }
 
 .aditional-info {
@@ -216,6 +226,7 @@ menu .cancel-icon {
 .bottom-bar {
   float: left;
   width: 100%;
+  display:inline-block; 
 }
 .bottom-bar > div {
   background: #3494fa;
@@ -223,4 +234,32 @@ menu .cancel-icon {
   float: left;
   box-sizing: border-box;
   padding: 5px;
+}
+
+.bottom-bar .info {
+  color: #ffffff;
+  font-size: 14px;
+
+}
+.bottom-bar .icon {
+  color: #ffffff;
+  font-size: 14px;
+  width: 20%
+}
+.image-banner
+{
+  z-index: 1000; 
+  position: relative; 
+  top: 30px;
+  float: left; 
+  height: 30px; 
+  width: 30%; 
+  text-align: center; 
+  border-radius: 0px 10px;
+  background: orange;
+  color: #ffffff;
+  padding: 7px 9px;
+  border-spacing: 2px;
+  border-color: #ffffff;
+
 }
